[gd_scene load_steps=10 format=2]

[ext_resource path="res://PinMesh.tres" type="MeshLibrary" id=1]
[ext_resource path="res://Ball.tscn" type="PackedScene" id=2]
[ext_resource path="res://Button.gd" type="Script" id=3]
[ext_resource path="res://World.gd" type="Script" id=4]
[ext_resource path="res://Panel.tscn" type="PackedScene" id=5]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 40, 1, 35 )

[sub_resource type="SpatialMaterial" id=2]
albedo_color = Color( 0.109804, 0.576471, 0.258824, 1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 20, 0.5, 18 )

[sub_resource type="PhysicsMaterial" id=4]
bounce = 0.8

[node name="World" type="Spatial"]
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": "Toggle the tree pause state. Note the pause button \"Pause Mode\" is set to \"PAUSE_MODE_PROCESS\", else the button becaomes inactive once the tree is paused."
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( -0.00658022, 0.561202, -0.827653, 0.00257936, 0.827678, 0.561198, 0.999975, 0.00155799, -0.00689385, -16.8129, 22.5578, 0.961547 )

[node name="Pinko" type="Spatial" parent="."]
transform = Transform( 0.258093, -0.965926, -0.0193699, 0.963217, 0.258819, -0.0722894, 0.0748395, 5.58793e-09, 0.997196, 34.6139, 0, 0 )

[node name="Board" type="RigidBody" parent="Pinko"]
mode = 1
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="Pinko/Board"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Pinko/Board"]
shape = SubResource( 3 )

[node name="Pins" type="Spatial" parent="Pinko"]
transform = Transform( 0.687227, 2.98023e-08, 0.726443, -2.98023e-08, 1, 0, -0.726443, -2.10734e-08, 0.687227, -7.09443, -0.468704, -3.25345e-09 )

[node name="GridMap" type="GridMap" parent="Pinko/Pins"]
transform = Transform( 1, 1.49012e-08, 2.22045e-16, -1.49012e-08, 1, 1.49012e-08, 6.61744e-23, -1.49012e-08, 1, 0, 0, 0 )
mesh_library = ExtResource( 1 )
cell_size = Vector3( 3, 4, 3 )
cell_scale = 2.0
data = {
"cells": PoolIntArray( 0, 0, 0, 1, 0, 0, 2, 0, 0, 7, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 0, 1, 0, 1, 1, 0, 2, 1, 0, 6, 1, 0, 7, 1, 0, 65532, 1, 0, 65533, 1, 0, 65534, 1, 0, 65535, 1, 0, 0, 2, 0, 1, 2, 0, 2, 2, 0, 5, 2, 0, 6, 2, 0, 65531, 2, 0, 65532, 2, 0, 65533, 2, 0, 65534, 2, 0, 65535, 2, 0, 4, 3, 0, 5, 3, 0, 3, 4, 0, 4, 4, 0, 2, 5, 0, 3, 5, 0, 1, 6, 0, 2, 6, 0, 0, 7, 0, 1, 7, 0, 2, 65531, 0, 1, 65532, 0, 2, 65532, 0, 0, 65533, 0, 1, 65533, 0, 2, 65533, 0, 0, 65534, 0, 1, 65534, 0, 2, 65534, 0, 65535, 65534, 0, 0, 65535, 0, 1, 65535, 0, 2, 65535, 0, 65534, 65535, 0, 65535, 65535, 0 )
}
__meta__ = {
"_editor_clip_": 2
}

[node name="Panel" parent="Pinko" instance=ExtResource( 5 )]
transform = Transform( 0.990546, -0.137185, 0, 0.137185, 0.990546, 0, 0, 0, 1, 0, 0, -17.8243 )

[node name="Panel5" parent="Pinko" instance=ExtResource( 5 )]
transform = Transform( 0.111829, -0.944704, 0.308275, 0.0548567, -0.303879, -0.951132, 0.992213, 0.123275, 0.0178408, -27.6765, 28.2944, -5.96046e-08 )

[node name="Panel2" parent="Pinko" instance=ExtResource( 5 )]
transform = Transform( 0.997031, -0.0770149, 0, 0.0770149, 0.997031, 0, 0, 0, 1, -1.90735e-06, 0.0181885, 17.3302 )
physics_material_override = SubResource( 4 )

[node name="Panel3" parent="Pinko" instance=ExtResource( 5 )]
transform = Transform( 0.170743, 0.985317, 0, -0.985317, 0.170743, 0, 0, 0, 1, -22.8367, 9.30799, -17.8243 )

[node name="Panel4" parent="Pinko" instance=ExtResource( 5 )]
transform = Transform( 0.135994, 0.979769, -0.14684, -0.990525, 0.13159, -0.0393456, -0.0192269, 0.150799, 0.988377, -22.8367, 9.32619, 17.3302 )
physics_material_override = SubResource( 4 )

[node name="Board2" type="RigidBody" parent="Pinko"]
transform = Transform( 0.258819, 0.965926, 0, -0.965926, 0.258819, 0, 0, 0, 1, -21.8532, 8.13593, 0 )
mode = 1
can_sleep = false

[node name="MeshInstance" type="MeshInstance" parent="Pinko/Board2"]
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Pinko/Board2"]
shape = SubResource( 3 )

[node name="Ball" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 10.5621, 0, 0 )
can_sleep = false

[node name="Spatial" type="Spatial" parent="."]
transform = Transform( -1.13133e-08, -0.965926, -0.258819, -4.2222e-08, 0.258819, -0.965926, 1, 0, -4.37114e-08, 39.6521, 20.8216, -5.78829 )

[node name="SpawnPoint" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 36.2534, 20.9874, 0 )

[node name="HSplitContainer" type="HSplitContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Reset" type="Button" parent="HSplitContainer"]
pause_mode = 2
margin_right = 48.0
margin_bottom = 40.0
text = "Reset"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Pause" type="Button" parent="HSplitContainer"]
pause_mode = 2
margin_left = 60.0
margin_right = 110.0
margin_bottom = 40.0
text = "Pause"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.12905, 0.833258, -0.537613, -0.4203, 0.44508, 0.790729, 0.898162, 0.328002, 0.292781, -0.022748, -0.044857, 0.00828552 )
light_energy = 0.88
light_bake_mode = 2
shadow_enabled = true
directional_shadow_mode = 0
directional_shadow_depth_range = 1

[connection signal="pressed" from="HSplitContainer/Reset" to="HSplitContainer/Reset" method="_on_Reset_pressed"]
[connection signal="pressed" from="HSplitContainer/Pause" to="HSplitContainer/Pause" method="_on_Pause_pressed"]
